--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
