--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-TOKEN_SECRET = "kjdfbdkjbdfjb"
+TOKEN_SECRET = kjdfbdkjbdfjb
+DBURL=mongodb+srv://govindrajputb17_db_user:TeWUmX8h2AXZUXam@cluster0.bv2rni9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
